# gamenative-wine-wcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: build-wcp.yml
assets/: README.md
scripts/: build-gamenative-wine.sh  build-latest.sh  build-wine.sh
src/wcp_builder/: __init__.py  cli.py  packaging.py  releases.py
tests/: test_packaging.py  test_releases.py
