[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcp-builder"
version = "0.1.0"
description = "Build GameNative-compatible, Bionic-compatible ARM64EC-style .wcp packages from official WineHQ stable releases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
